--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,39 +1,48 @@
 # This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Upload Python Package
 
+# Define the trigger for this workflow
 on:
   release:
     types: [published]
 
+# Specify permissions for accessing repository contents
 permissions:
   contents: read
 
+# Define the jobs to be executed
 jobs:
   deploy:
 
+    # Specify the operating system for the job
     runs-on: ubuntu-latest
 
+    # Define the steps to be executed within the job
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3  # Checkout the code from the repository
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.x'
+        python-version: '3.x'  # Specify the Python version you need
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build
+
+    - name: Set working directory
+      run: cd robotframework-imagedetection  # Specify the path to your project's root directory
+
     - name: Build package
       run: python -m build
+      working-directory: robotframework-imagedetection  # Specify the path to your project's root directory
+
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
-        user: __token__
-        password: ${{ secrets.__token__ }}
+        user: __token__  # Replace with your PyPI API token username
+        password: ${{ secrets.__token__ }}  # Reference the secret with your PyPI API token
+
+# Replace 'path/to/your/project' and '__token__' with actual paths and values
