--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,7 +26,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'  # Specify the Python version you need
-
+    - name: List contents of working directory
+      run: ls -R
+      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
